...
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color(220, 100, 100)
                    )
                ) {
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Löschen",
                        modifier = Modifier
                            .size(24.dp)
                            .padding(end = 4.dp),
                        tint = Color.White
                    )
                    Text(
...
